projects/vb6parse/snapshots/syntax/library/functions/datetime/monthname/monthname_basic.snap
---
source: projects/vb6parse/src/syntax/library/functions/datetime/monthname.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: name
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: NameStatement
      children:
        - kind: NameKeyword
          text: name
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: EqualityOperator
              text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MonthName
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "3"
            - kind: RightParenthesis
              text: )
    - kind: Newline
      text: "\n"
